--- a/css/index_css/index.css
+++ b/css/index_css/index.css
@@ -28,7 +28,7 @@ p{font-size: 14px}
 
 #link{ float:left; width:68px; padding:21px 0 0 26px;}
 #link a{ width:30px;}
-#link .facebook{ margin-right:0px;}
+#link .github{ margin-right:0px;}
 #link img{ width:30px; height:30px;}
 
 
