--- a/css/index_css/index.css
+++ b/css/index_css/index.css
@@ -46,18 +46,18 @@ p{font-size: 14px}
 .box .infoShow li{cursor:pointer;}
 .box .infoShow li a{display: inline-block;width: 100px;height: 100px;z-index: 999}
 .box .infoShow img{ width:100px; height:100px;}
-.box .txt1{ width:400px; position:absolute; left:55%; top:-35px; overflow:hidden; z-index:20}
+.box .txt1{ width:400px; position:absolute; left:750px; top:-35px;overflow: hidden;  z-index:20;height: 100%}
 .box .txt1 img{ width:569px; height:333px}
 .box .txt1 .txtCon{ width:316px;padding-left:15px;margin-left: 32px;border-left: solid 1px #fff; margin-top:32px; position:relative; left:0; top:0;}
 .box .txt1 .txtCon p{ color:#fff; line-height:25px;}
-.box .txt1 .icon{ margin-top:22px; padding-left:45px; position:relative; left:0; top:0;}
+.box .txt1 .icon{ margin-top:22px; padding-left:45px; position:relative; left:0; top:200px;}
 .box .txt1 .icon .icon1{ width:40px; height:40px; float:left; position:relative;}
 .box .txt1 .icon img{ width:30px; height:30px; position:absolute; left:0; top:0; cursor:pointer;}
 .box .txt1 .icon .after{filter:alpha(opacity=0); opacity:0;}
 /* end public.css */
 
 /* box1.css */
-#box1{ /*background:#060606 url(../../img/index_img/bg_home.jpg) no-repeat center top;*/ background:linear-gradient(to right, #13d0ff 0%, #2174a2 100%)}
+#box1{ /*background:#060606 url(../../img/index_img/logo/bg.jpg) no-repeat center top;*/ background:linear-gradient(to right, #13d0ff 0%, #2174a2 100%)}
 #box1 .bj1{background:url(../../img/index_img/petale.png) no-repeat -60px 0;}
 #box1 .bj2{ background:url(../../img/index_img/triangles.png) no-repeat -60px 0;}
 #box1 .ziwojieshao{position: absolute;top:200px;left: 170px;height: 200px;}
@@ -91,7 +91,6 @@ p{font-size: 14px}
 #box3 .jsShili{top:110px;height:500px;left: 140px}
 #box3 .jsShili li{ height:120px;background-color: #FFF9AE; margin: 8px;padding: 25px}
 #box3 .jsShili a{ font-size: 14px;display: inline-block;text-align: center;line-height: 22px}
-#box3 .txt1{left:62.5%;}
 #box3 .txt1 .logo1{ margin-left:-60px}
 #box3 .txt1 .txtCon{ border-color:#000;}
 #box3 .txt1 .txtCon p{ color:#000;}
@@ -135,7 +134,6 @@ p{font-size: 14px}
 #box6{ background:#fbfbfb; width:100%; color:#7d7d7d;}  /* top:3550px; */
 #box6 .contact{ width:980px; margin: 90px auto;}
 #box6 h4{ width:814px; height:39px; font-size:32px; line-height:38px; background: url(../../img/index_img/trait.png) no-repeat left bottom; margin-bottom:20px; float:left}
-#box6 .map{ float:left; width: 520px; padding:5px;}
 #box6 .info{ float:left; width:400px; padding:20px;}
 #box6 .info h5{ font-size:22px; line-height:40px; background:url(../../img/index_img/t_orange.png) no-repeat  -250px bottom;}
 #box6 .inrCon{ margin-top:40px;}
