--- a/css/index_css/index.css
+++ b/css/index_css/index.css
@@ -19,7 +19,7 @@ p{font-size: 14px}
 #bjList li div{ position:absolute; left:0; top:0; width:110px;height:34px; overflow:hidden;}
 #bjList li div img{ width:110px; height: 34px; position:absolute; left:10px; top:34px;}
 #bjList .active img{left:0; top:0;}
-#bjList a{ position:absolute; left:10px; top:0; width:100px;height:34px; color:#fff; line-height:34px; background:url(../../img/index_img/Bar_agence.png) no-repeat left 32px; text-align:center;}
+#bjList a{ position:absolute; left:10px; top:0; width:100px;height:34px; color:#000; line-height:34px; background:url(../../img/index_img/Bar_agence.png) no-repeat left 32px; text-align:center;}
 #bjList .cor2{ background-image:url(../../img/index_img/Bar_strategie.png);}
 #bjList .cor3{ background-image:url(../../img/index_img/Bar_design.png);}
 #bjList .cor4{ background-image:url(../../img/index_img/Bar_techno.png);}
@@ -63,6 +63,7 @@ p{font-size: 14px}
 #box1 .ziwojieshao{position: absolute;top:200px;left: 170px;height: 200px;}
 #box1 .ziwojieshao h1{font-size:20px;line-height: 40px}
 #box1 .ziwojieshao p{font-size: 17px;line-height: 30px}
+#box1 .txt1 .icon{top:0;}
 #box1 .ziwojieshao p span{font-weight: bold}
 #box1 .rightbox{ background:#cdcdcd;}
 #box1 .infoShow ul{ padding:10px;}
